src/style.scss
// #00356b
// #1b1513
// #010100
$main-purple: #5a189a;
$light-purple: #c77dff;
$dark-purple: #240046;
$text-color: #fff;
$pink: #f72585;

html {
  font-size: 62.5%;
  box-sizing: border-box;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  font-size: 1.6rem;
  color: $text-color;
  font-family: 'Oswald', sans-serif;
  overflow-y: scroll;
  background-color: $light-purple;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'OutrunFutureBold', serif;
}

ul,
ol {
  list-style: none;
}

button,
a,
input,
textarea {
  font-family: inherit;
}

a {
  font-family: 'OutrunFutureRegular';
}

img {
  width: 100%;
  max-width: 100%;
}

.main {
  .container {
    min-height: 100vh;
    overflow: hidden;
    & > *:not(.title) {
      padding: 3rem 3rem 5rem;
    }
  }
}

.greeting {
  min-height: 100vh;
  background: center 35% / cover $dark-purple;
  position: relative;

  &__title {
    text-align: center;
    line-height: 1.6;
    min-height: 100vh;
    min-width: 100vw;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    background-image: linear-gradient(
      rgba($dark-purple, 0.6),
      rgba($dark-purple, 0.6)
    );
    & > span {
      transform: translateY(-5%);
    }
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 5rem;
    text-shadow: 0.05em 0.05em $pink;

    &--pink {
      font-family: 'OutrunFutureBold';
      color: $pink;
      font-size: 7rem;
      text-shadow: 0.05em 0.05em $dark-purple;
      @supports (background-clip: text) {
        color: transparent;
        background-image: linear-gradient(
          rgba(rgb(255, 34, 155), 1),
          rgba(rgb(58, 0, 97), 1)
        );
        background-clip: text;
        text-shadow: -0.05em -0.05em $pink;
      }
    }
  }

  &__video {
    position: absolute;
    max-width: 100vw;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 10;
  background-color: rgba($dark-purple, 0.9);
  overflow: hidden;
  display: flex;
  align-items: center;

  &__home {
    font-size: 2rem;
    color: inherit;
    text-decoration: none;
    display: block;
    padding: 0 0.6em;
    transition: color 0.2s;
    &:hover,
    &:focus {
      color: $pink;
    }

    &--active {
      color: $pink;
    }
  }

  nav {
    flex: 1;
    display: flex;
  }

  &__list {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  &__link {
    color: inherit;
    text-decoration: none;
    display: block;
    padding: 0.6em 1em;
    position: relative;
    transition: color 0.2s;

    &::after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      margin: auto;
      background-color: $pink;
      height: 0.4rem;
      width: 0;
      transition: 0.2s width;
    }

    &:hover,
    &:focus {
      &::after {
        width: 100%;
      }
    }

    &--active {
      color: $pink;
      &::after {
        width: 0 !important;
      }
    }
  }
  &__list-item {
    &--home {
      .header__link {
        padding: 1em 1.3em;
        background-color: $main-purple;
        color: #fff;
        &:hover,
        &:focus {
          color: #fff;
        }
      }
    }
  }
}

.card-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
  row-gap: 2rem;
  column-gap: 2rem;
}

.skill-card {
  border-radius: 0.5em;
  background-color: #fff;
  padding: 1em 0.5em;
  h3 {
    font-size: 1.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 1em;
    div {
      display: flex;
      align-items: center;
      justify-content: flex-end;
      img {
        height: 2rem;
        width: 2rem;
      }
    }
    span {
      margin-left: 0.5em;
      white-space: nowrap;
    }
  }

  .list {
    padding: 1rem 0 1rem 2rem;

    &-item {
      position: relative;
      padding-left: 3rem;
      letter-spacing: 0.1rem;

      &::before {
        content: '';
        position: absolute;
        top: 50%;
        left: 0;
        transform: translate(0, -50%);
        height: 1rem;
        width: 1rem;
        // border-radius: 50%;
        background-color: #fff;
        border: 0.3rem solid $main-purple;
      }
    }
  }
}

.title {
  margin-top: 4rem;
  margin-bottom: 1rem;
  position: relative;
  font-family: 'OutrunFutureBold', serif;
  font-size: 3rem;
  text-shadow: 0.075em 0.075em $pink;
  position: relative;
  display: inline-block;
  text-align: center;
}

.background__overlay {
  background-image: linear-gradient(
    rgba($dark-purple, 0.7),
    rgba($dark-purple, 0.7)
  );

  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: -2;
}

.background {
  z-index: -1;
  min-height: 100vh;
  background-size: 30rem;
  position: relative;

  .warning {
    font-family: 'OutrunFutureItalicBold';
    color: $pink;
    text-align: center;
    font-size: 6rem;
    text-shadow: 0.05em 0.05em #fff;
  }
}

.options {
  display: flex;
  margin-bottom: 1em;

  &__right {
    max-width: 75%;
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    margin-left: auto;
    padding-left: 1em;
    & > * {
      margin: 0.1em;
    }
  }

  button {
    font-size: 1.6rem;
    cursor: pointer;
    padding: 0.25em 0.5em;
    border-radius: 0.25rem;
    font-weight: bold;
  }

  &__sort {
    display: flex;
    align-items: center;
    justify-content: space-between;

    &-icon {
      display: flex;
      justify-content: center;
      align-items: center;
      margin-left: 0.25em;

      svg {
        height: 1rem;
        width: 1rem;
      }
    }

    &--2 {
      color: $pink;
      background-color: $dark-purple;
      border: 0.2rem ridge $pink;
    }
    &--1 {
      color: $dark-purple;
      background-color: $pink;
      border: 0.2rem ridge $dark-purple;
    }
  }

  &__filter {
    &--2 {
      color: $pink;
      background-color: $dark-purple;
      border: 0.2rem ridge $pink;
    }
    &--1 {
      color: $dark-purple;
      background-color: $pink;
      border: 0.2rem ridge $dark-purple;
    }
  }
}

.projects-list {
  padding: 2em;
  background-color: #fff;
  border-radius: 0.5rem;

  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(38rem, 1fr));
  gap: 3rem;
  min-height: 40rem;
  justify-items: center;

  &__message {
    grid-column: 1 / -1;
    text-align: center;
  }
}

.project {
  background-color: #fff;
  border-radius: 0.25em;
  overflow: hidden;
  box-shadow: 0 0 2rem rgba($dark-purple, 0.2);

  display: flex;

  &__link:link,
  &__link:visited {
    text-decoration: none;
    color: inherit;
    display: flex;
    flex-direction: column;
  }

  &__imageContainer {
    flex: 1;
    overflow: hidden;
    img {
      display: block;
      height: 100%;
      width: 100%;
      object-fit: cover;
    }
  }

  &__info {
    padding: 1em;

    & > & {
      line-height: 1;
    }
  }
  &__title {
    font-size: 1.8rem;
  }
  &__description {
    font-size: 1.4rem;
  }
}

